[gd_scene load_steps=5 format=3 uid="uid://do1yjhijgbid3"]

[ext_resource type="Script" path="res://scripts/overworld/puzzle_decoration.gd" id="1_xtdxv"]
[ext_resource type="PackedScene" uid="uid://bmaqkuubonmf2" path="res://prefabs/entities/animated_decoration.tscn" id="2_h8f6g"]
[ext_resource type="SpriteFrames" uid="uid://dwc8py4u2ei65" path="res://graphics/ui/a_interact_icon.tres" id="3_5dkx7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k7616"]
size = Vector2(17, 17)

[node name="PuzzleDecoration" type="Area2D"]
script = ExtResource("1_xtdxv")
interactPriority = 1

[node name="AnimatedDecoration" parent="." instance=ExtResource("2_h8f6g")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_k7616")

[node name="InteractSprite" type="AnimatedSprite2D" parent="." groups=["Interactable"]]
position = Vector2(0, -10)
sprite_frames = ExtResource("3_5dkx7")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]

[editable path="AnimatedDecoration"]
